[package]
name = "radient"
version = "0.3.0"
edition = "2021"
authors = ["Axect <ax2ct@outlook.com>"]
description = "Radient is a Rust library designed for automatic differentiation. It leverages the power of computational graphs to perform forward and backward passes for gradient calculations."
license = "MIT OR Apache-2.0"
categories = ["science"]
readme = "README.md"
repository = "https://github.com/Axect/Radient"
keywords = ["gradient", "automatic", "differentiation", "machine-learning"]
exclude = ["src/bin/", "src/main.rs", "src/history/", "examples/"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
casey = "0.4"
peroxide-num = "0.1"
peroxide = "0.37"
